[package]
name = "displayflow"
version = "1.0.3"
edition = "2021"
authors = ["pyotq"]
description = "Persistent Monitor Profile Manager for Windows"

[dependencies]
# Windows API Anbindungen
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
    "Win32_Devices_Display",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",

] }

winreg = "0.52"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
[profile.release]
opt-level = "z"      
lto = true           
codegen-units = 1    
panic = "abort"      
strip = true